--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -1,6 +1,9 @@
-base-uri = http://192.168.99.101
-port = 32768
+base-uri = http://192.168.99.103
+port = 3000
 base-path = /rest
+
+proxy_ip = 127.0.0.1
+proxy_port = 8080
 
 username = admin@juice-sh.op
 password = admin123
