--- a/restsec-samples/pom.xml
+++ b/restsec-samples/pom.xml
@@ -45,6 +45,13 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.3.14.v20161028</version>
+        </dependency>
+
     </dependencies>
 
 </project>
