general improvements, added switch to Documentation Types, added SQLi payloads

--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -8,8 +8,9 @@ proxy_port = 8080
 username = jim@juice-sh.op
 password = ncc-1701
 
-useHATEOAS = true
-useSwagger = false
-entryPoint = http://localhost:10001/albums/
+documentationType = hateoas
+entryPointHATEOAS = http://localhost:10001/albums/
 swaggerLocation = docs_swagger/swagger-juiceshop-short.json
-bruteforce = false
+allHTTPMethods = false
+
+scanForVulnerabilityTypes = all
